--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>TUTORIAL NODE JS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>LOGIN BERHASIL</h1>
+    <div class="container">
+        <h3><%= title %></h3>
+        <ul>
+        </ul>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nama</th>
+                    <th scope="col">Kelas</th>
+                    <th scope="col">Aksi</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% for (let user of users) { %>
+                <tr>
+                    <th scope="row"><%= user.id %></th>
+                    <th scope="row"><%= user.nama %></th>
+                    <th scope="row"><%= user.kelas %></th>
+                    <th scope="row"><a href="/edit/<%= user.id %>" class="btn btn-warning edit">Edit</a>
+                      <a href="/delete/<%= user.id %>" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?')">Hapus</a></th>
+                </tr>
+                <% } %>
+            </tbody>
+        </table>
+        <form action="/tambah" method="post">
+            <h3>TAMBAH ANAK MAGANG BARU</h3>
+            <div class="row mb-3">
+              <label for="nama" class="col-sm-2 col-form-label">Nama</label>
+              <div class="col-sm-10">
+                <input type="text" name="nama" class="form-control" required>
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="kelas" class="col-sm-2 col-form-label">Kelas</label>
+              <div class="col-sm-10">
+                <input type="text" name="kelas" class="form-control" required>
+              </div>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Simpan">
+        </form>
+        <a class="btn btn-secondary" href="/" role="button">Logout</a>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
