menambahkan crud pada project

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -26,9 +26,12 @@
             <% for (let AKUN of akun) { %>
             <h3 class="ms-5 mb-3 text-white bi-person-circle">   <%= AKUN.username %></h3>
             <% } %>
-            <a class="nav-link bi-house-door-fill ms-5" href="#">    Beranda</a>
-            <a class="nav-link bi-people-fill ms-5" href="#">    Data Mahasiswa</a>
+            <a class="nav-link bi-house-door-fill ms-5" href="dashboard">    Beranda</a>
+            <a class="nav-link bi-people-fill ms-5" href="data-mhs">    Data Mahasiswa</a>
             <a class="nav-link bi-calendar-fill ms-5" href="#">  Data Absensi</a>
+            <a class="nav-link bi-book-fill ms-5" href="#"> Data Kegiatan</a>
+            <a class="nav-link bi-person-fill ms-5" href="#"> Administrator</a>
+            <a class="nav-link bi-gear-fill ms-5" href="#"> Pengaturan</a>
             <a class="nav-link bi-box-arrow-left ms-5" href="/"> Logout</a>
         </nav>
         <div class="col-md-10 bg-body-secondary w-75">
