--- a/views/data-mhs.ejs
+++ b/views/data-mhs.ejs
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
     <style>
         .sec-navbar{
-            height: 100vh;
+          height: 100vh;
         }
         body {
-            overflow-x: hidden;
+          overflow: hidden;
+        }
+        .data-mahasiswa {
+          max-height: 100vh;
+          overflow-y: visible;
+        }
+        .data-mahasiswa .container {
+          overflow-y: auto;
+          max-height: calc(100vh - 200px);
         }
     </style>
 </head>
@@ -34,7 +42,7 @@
             <a class="nav-link bi-gear-fill ms-5" href="#"> Pengaturan</a>
             <a class="nav-link bi-box-arrow-left ms-5" href="/"> Logout</a>
         </nav>
-        <div class="col-md-10 bg-body-secondary w-75">
+        <div class="col-md-10 bg-body-secondary w-75 data-mahasiswa">
             <p class="p-3 bi-people-fill">  /   Data Mahasiswa</p>
             <div class="card">
               <div class="card-header p-3 d-flex align-items-center justify-content-between">
@@ -50,15 +58,18 @@
 
             <div class="container">
                 <h3><%= title %></h3>
-                <ul>
-                </ul>
+                <a class="btn btn-success bi-plus mb-3" href="/tambah"> Tambah</a>
                 <table class="table">
                     <thead>
                         <tr>
-                            <th scope="col">Id</th>
-                            <th scope="col">Nama</th>
-                            <th scope="col">Kelas</th>
-                            <th scope="col">Aksi</th>
+                          <th scope="col">No</th>
+                          <th scope="col">Nama</th>
+                          <th scope="col">Universitas</th>
+                          <th scope="col">NIM</th>
+                          <th scope="col">Mulai Magang</th>
+                          <th scope="col">Akhir Magang</th>
+                          <th scope="col">Foto</th>
+                          <th scope="col">Aksi</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -66,29 +77,19 @@
                         <tr>
                             <th scope="row"><%= user.id %></th>
                             <th scope="row"><%= user.nama %></th>
-                            <th scope="row"><%= user.kelas %></th>
-                            <th scope="row"><a href="/edit/<%= user.id %>" class="btn btn-warning edit">Edit</a>
-                              <a href="/delete/<%= user.id %>" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?')">Hapus</a></th>
+                            <th scope="row"><%= user.univ %></th>
+                            <th scope="row"><%= user.nim %></th>
+                            <th scope="row"><%= user.mulai %></th>
+                            <th scope="row"><%= user.akhir %></th>
+                            <th scope="row"><img src="/gambar/<%= user.id %>" alt="<%= user.nama %>" width="100" height="100"></th>
+                            <th scope="row">
+                              <a href="" class="btn btn-success bi-cursor-fill"></a>
+                              <a href="/edit/<%= user.id %>" class="btn btn-warning edit bi-pencil-square"></a>
+                              <a href="/delete/<%= user.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this user?')"></a></th>
                         </tr>
                         <% } %>
                     </tbody>
                 </table>
-                <form action="/tambah" method="post">
-                    <h3>TAMBAH ANAK MAGANG BARU</h3>
-                    <div class="row mb-3">
-                      <label for="nama" class="col-sm-2 col-form-label">Nama</label>
-                      <div class="col-sm-10">
-                        <input type="text" name="nama" class="form-control" required>
-                      </div>
-                    </div>
-                    <div class="row mb-3">
-                      <label for="kelas" class="col-sm-2 col-form-label">Kelas</label>
-                      <div class="col-sm-10">
-                        <input type="text" name="kelas" class="form-control" required>
-                      </div>
-                    </div>
-                    <input type="submit" class="btn btn-primary" value="Simpan">
-                </form>
             </div>
         </div>
     </div>
