--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,24 +8,55 @@
 </head>
 <body>
     <div class="container">
-        <form action="/update/<%= userData.id %>" method="post">
+        <form action="/update/<%= userData.id %>" method="post" enctype="multipart/form-data">
             <h3><% judul %></h3>
             <div class="row mb-3">
               <label for="nama" class="col-sm-2 col-form-label">Nama</label>
               <div class="col-sm-10">
-                <input type="text" name="nama" class="form-control" value="<%= userData.nama %>" required>
+                <input type="text" name="nama" class="form-control" required value="<%= userData.nama %>">
               </div>
             </div>
             <div class="row mb-3">
-              <label for="kelas" class="col-sm-2 col-form-label">Kelas</label>
+              <label for="univ" class="col-sm-2 col-form-label">Universitas</label>
               <div class="col-sm-10">
-                <input type="text" name="kelas" class="form-control" value="<%= userData.kelas %>" required>
+                <input type="text" name="univ" class="form-control" required value="<%= userData.univ %>">
               </div>
             </div>
-            <input type="submit" class="btn btn-primary" value="Simpan">
+            <div class="row mb-3">
+              <label for="nim" class="col-sm-2 col-form-label">NIM</label>
+              <div class="col-sm-10">
+                <input type="text" name="nim" class="form-control" required value="<%= userData.nim %>">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="mulai" class="col-sm-2 col-form-label">Mulai Magang</label>
+              <div class="col-sm-10">
+                <input type="date" name="mulai" class="form-control" required value="<%= moment(userData.mulai).format('YYYY-MM-DD') %>">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="akhir" class="col-sm-2 col-form-label">Akhir Magang</label>
+              <div class="col-sm-10">
+                <input type="date" name="akhir" class="form-control" required value="<%= moment(userData.akhir).format('YYYY-MM-DD') %>">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="filename" class="col-sm-2 col-form-label">Foto</label>
+              <div class="col-sm-10">
+                <img src="/gambar/<%= userData.id %>" alt="<%= userData.nama %>" width="100" height="100">
+              </div>
+            </div>
+            <div class="row mb-3">
+              <label for="newFilename" class="col-sm-2 col-form-label">Upload Foto Baru</label>
+              <div class="col-sm-10">
+                <input type="file" name="newFilename" class="form-control" accept="image/*">
+              </div>
+            </div>
+            <input type="submit" class="btn btn-success" value="Simpan">
+            <a class="btn btn-danger" href="/data-mhs"> Batal</a>
         </form>
     </div> 
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
