--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Administrator</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
     <style>
@@ -35,9 +35,9 @@
             <a class="nav-link bi-box-arrow-left ms-5" href="/"> Logout</a>
         </nav>
         <div class="col-md-10 bg-body-secondary w-75">
-            <p class="p-3 bi-house-door-fill">  /   Beranda</p>
+            <p class="p-3 bi-person-fill">  /   Administrator</p>
             <div class="card">
-                <h5 class="card-header p-3">Beranda</h5>
+                <h5 class="card-header p-3">Administrator</h5>
                 <div class="card-body mt-3">
                     <h5 class="card-title">Selamat Datang, Yahak Lapil.</h5>
                     <p class="card-text">Selamat Datang di Aplikasi Absensi dan Kegiatan Harian Mahasiswa berbasis Web. Sebuah sistem yang memungkinkan para Mahasiswa PKL di Dinas Komunikasi dan Informatika Palembang untuk melakukan absensi dan mencatat kegiatan harian dari website. Sistem ini diharapkan dapat memberi kemudahan setiap Mahasiswa PKL untuk melakukan absensi dan mencatat kegiatan harian.</p>
