--- a/views/data-absen.ejs
+++ b/views/data-absen.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Mahasiswa</title>
+    <title>Data Absensi</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="bootstrap-icons/font/bootstrap-icons.min.css">
     <style>
@@ -43,10 +43,10 @@
             <a class="nav-link bi-box-arrow-left ms-5" href="/"> Logout</a>
         </nav>
         <div class="col-md-10 bg-body-secondary w-75 data-mahasiswa">
-            <p class="p-3 bi-people-fill">  /   Data Mahasiswa</p>
+            <p class="p-3 bi-calendar-fill">  /   Data Absensi</p>
             <div class="card">
               <div class="card-header p-3 d-flex align-items-center justify-content-between">
-                <h5>Data Mahasiswa</h5>
+                <h5>Data Absensi</h5>
                 <div class="input-group w-50">
                   <input type="text" class="form-control" placeholder="Cari">
                   <div class="input-group-prepend">
@@ -54,43 +54,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-
-            <div class="container">
-                <h3><%= title %></h3>
-                <a class="btn btn-success bi-plus mb-3" href="/tambah"> Tambah</a>
-                <table class="table">
-                    <thead>
-                        <tr>
-                          <th scope="col">No</th>
-                          <th scope="col">Nama</th>
-                          <th scope="col">Universitas</th>
-                          <th scope="col">NIM</th>
-                          <th scope="col">Mulai Magang</th>
-                          <th scope="col">Akhir Magang</th>
-                          <th scope="col">Foto</th>
-                          <th scope="col">Aksi</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% for (let user of users) { %>
-                        <tr>
-                            <th scope="row"><%= user.id %></th>
-                            <th scope="row"><%= user.nama %></th>
-                            <th scope="row"><%= user.univ %></th>
-                            <th scope="row"><%= user.nim %></th>
-                            <th scope="row"><%= user.mulai %></th>
-                            <th scope="row"><%= user.akhir %></th>
-                            <th scope="row"><img src="/gambar/<%= user.id %>" alt="<%= user.nama %>" width="100" height="100"></th>
-                            <th scope="row">
-                              <a href="/detail/<%= user.id %>" class="btn btn-success bi-cursor-fill"></a>
-                              <a href="/akun-mhs" class="btn btn-primary bi-person-fill"></a>
-                              <a href="/edit/<%= user.id %>" class="btn btn-warning edit bi-pencil-square"></a>
-                              <a href="/delete/<%= user.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this user?')"></a></th>
-                        </tr>
-                        <% } %>
-                    </tbody>
-                </table>
             </div>
         </div>
     </div>
