--- a/views/kegiatan.ejs
+++ b/views/kegiatan.ejs
@@ -23,9 +23,7 @@
     </nav>
     <div class="row">
         <nav class="col-md-4 nav flex-column bg-dark w-25 sec-navbar">
-            <% for (let AKUN of akun) { %>
-            <h3 class="ms-5 mb-3 text-white bi-person-circle">   <%= AKUN.username %></h3>
-            <% } %>
+            <h3 class="ms-5 mb-3 text-white bi-person-circle">   <%= username %></h3>
             <a class="nav-link bi-house-door-fill ms-5" href="mahasiswa">    Beranda</a>
             <a class="nav-link bi-calendar-fill ms-5" href="absensi">    Absensi</a>
             <a class="nav-link bi-arrow-counterclockwise ms-5" href="riwayat-absen">  Riwayat Absensi</a>
@@ -36,12 +34,41 @@
         <div class="col-md-10 bg-body-secondary w-75">
             <p class="p-3 bi-book-fill">  /   Kegiatan Harian</p>
             <div class="card">
-                <h5 class="card-header p-3">Kegiatan Harian</h5>
-                <div class="card-body mt-3">
-                    <h5 class="card-title">Selamat Datang, Yahak Lapil.</h5>
-                    <p class="card-text">Selamat Datang di Aplikasi Absensi dan Kegiatan Harian Mahasiswa berbasis Web. Sebuah sistem yang memungkinkan para Mahasiswa PKL di Dinas Komunikasi dan Informatika Palembang untuk melakukan absensi dan mencatat kegiatan harian dari website. Sistem ini diharapkan dapat memberi kemudahan setiap Mahasiswa PKL untuk melakukan absensi dan mencatat kegiatan harian.</p>
+                <div class="card-header p-3 d-flex align-items-center justify-content-between">
+                    <h5>Kegiatan Harian</h5>
+                    <div class="input-group w-50">
+                      <input type="text" class="form-control" placeholder="Cari">
+                      <div class="input-group-prepend">
+                        <button class="btn btn-outline-secondary bi-search" type="button"></button>
+                      </div>
+                    </div>
                 </div>
             </div>
+
+            <div class="container">
+                <a class="btn btn-success bi-plus mb-3 mt-3" href=""> Tambah</a>
+                <a class="btn btn-primary bi-file-text-fill mb-3 mt-3" href=""> Cetak</a>
+                <table class="table">
+                    <thead>
+                        <tr>
+                          <th scope="col">No</th>
+                          <th scope="col">Hari</th>
+                          <th scope="col">Tanggal</th>
+                          <th scope="col">Jam</th>
+                          <th scope="col">Kegiatan</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row"></th>
+                            <th scope="row"></th>
+                            <th scope="row"></th>
+                            <th scope="row"></th>
+                            <th scope="row"></th>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
     </div>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
