--- a/views/akun-mhs.ejs
+++ b/views/akun-mhs.ejs
@@ -11,26 +11,26 @@
     <div class="container">
         <div class="card mt-5 text-center w-50 mx-auto">
             <div class="card-body">
-                <form action="/tambah" method="post" enctype="multipart/form-data">
+                <form action="/tambah-akun" method="post">
                     <h3 class="mt-5">TAMBAH AKUN</h3>
                     <div class="row mb-3">
-                      <label for="nama" class="col-sm-2 col-form-label">Nama</label>
+                      <label for="username" class="col-sm-2 col-form-label">Username</label>
                       <div class="col-sm-10">
-                        <input type="text" name="nama" class="form-control" required>
+                        <input type="text" name="username" class="form-control" required>
                       </div>
                     </div>
                     <div class="row mb-3">
-                      <label for="univ" class="col-sm-2 col-form-label">Password</label>
+                      <label for="password" class="col-sm-2 col-form-label">Password</label>
                       <div class="col-sm-10">
                         <input type="password" name="password" class="form-control" required>
                       </div>
                     </div>
+                    <div class="text-center mt-3">
+                        <input type="submit" class="btn btn-success" value="Simpan">
+                        <a class="btn btn-danger" href="/data-mhs"> Tutup</a>
+                    </div>
                 </form>
             </div>
-        </div>
-        <div class="text-center mt-3">
-            <input type="submit" class="btn btn-success" value="Simpan">
-            <a class="btn btn-danger" href="/data-mhs"> Tutup</a>
         </div>
     </div>
 
