--- a/views/data-kegiatan.ejs
+++ b/views/data-kegiatan.ejs
@@ -31,9 +31,7 @@
     </nav>
     <div class="row">
         <nav class="col-md-4 nav flex-column bg-dark w-25 sec-navbar">
-            <% for (let AKUN of akun) { %>
-            <h3 class="ms-5 mb-3 text-white bi-person-circle">   <%= AKUN.username %></h3>
-            <% } %>
+            <h3 class="ms-5 mb-3 text-white bi-person-circle">   <%= username %></h3>
             <a class="nav-link bi-house-door-fill ms-5" href="dashboard">    Beranda</a>
             <a class="nav-link bi-people-fill ms-5" href="data-mhs">    Data Mahasiswa</a>
             <a class="nav-link bi-calendar-fill ms-5" href="data-absen">  Data Absensi</a>
@@ -42,6 +40,7 @@
             <a class="nav-link bi-gear-fill ms-5" href="pengaturan"> Pengaturan</a>
             <a class="nav-link bi-box-arrow-left ms-5" href="/"> Logout</a>
         </nav>
+
         <div class="col-md-10 bg-body-secondary w-75 data-mahasiswa">
             <p class="p-3 bi-book-fill">  /   Data Kegiatan</p>
             <div class="card">
@@ -55,6 +54,39 @@
                 </div>
               </div>
             </div>
+
+            <div class="container">
+              <h3>DATA KEGIATAN</h3>
+              <a class="btn btn-success bi-plus mb-3" href=""> Tambah</a>
+              <table class="table">
+                  <thead>
+                      <tr>
+                        <th scope="col">No</th>
+                        <th scope="col">Nama</th>
+                        <th scope="col">Hari</th>
+                        <th scope="col">Tanggal</th>
+                        <th scope="col">Jam</th>
+                        <th scope="col">Kegiatan</th>
+                        <th scope="col">Aksi</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr>
+                          <th scope="row"></th>
+                          <th scope="row"></th>
+                          <th scope="row"></th>
+                          <th scope="row"></th>
+                          <th scope="row"></th>
+                          <th scope="row"></th>
+                          <th scope="row">
+                            <a href="" class="btn btn-warning bi-pencil-square"></a>
+                            <a href="" class="btn btn-danger bi-trash-fill"></a>
+                            <a href="" class="btn btn-primary bi-file-text-fill"></a>
+                      </tr>
+                  </tbody>
+              </table>
+            </div>
+
         </div>
     </div>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
