--- a/views/data-absen.ejs
+++ b/views/data-absen.ejs
@@ -57,7 +57,7 @@
 
             <div class="container">
               <h3>DATA ABSEN</h3>
-              <a class="btn btn-success bi-plus mb-3" href=""> Absensi</a>
+              <a class="btn btn-success bi-plus mb-3" href="tambah-absen"> Absensi</a>
               <table class="table">
                   <thead>
                       <tr>
