--- a/views/data-kegiatan.ejs
+++ b/views/data-kegiatan.ejs
@@ -57,7 +57,7 @@
 
             <div class="container">
               <h3>DATA KEGIATAN</h3>
-              <a class="btn btn-success bi-plus mb-3" href=""> Tambah</a>
+              <a class="btn btn-success bi-plus mb-3" href="/tambah-kegiatan"> Tambah</a>
               <table class="table">
                   <thead>
                       <tr>
