menambahkan beberapa fitur

--- a/views/absensi.ejs
+++ b/views/absensi.ejs
@@ -64,7 +64,7 @@
                           </tr>
                         </tbody>
                       </table>
-                      <a href="" class="btn btn-success bi-clock-fill"> Absensi</a>
+                      <a href="/absen-mhs" class="btn btn-success bi-clock-fill"> Absensi</a>
                 </div>
             </div>
             
