--- a/views/data-absen.ejs
+++ b/views/data-absen.ejs
@@ -81,7 +81,7 @@
                           <th scope="row"></th>
                           <th scope="row"></th>
                           <th scope="row">
-                            <a href="" class="btn btn-success bi-clock-fill"> Absensi</a>
+                            <a href="/mulai-absen" class="btn btn-success bi-clock-fill"> Absensi</a>
                             <a href="" class="btn btn-primary bi-file-text-fill"> Cetak</a>
                       </tr>
                   </tbody>
