--- a/views/tambah-admin.ejs
+++ b/views/tambah-admin.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <form action="/tambah" method="post" enctype="multipart/form-data">
+    <form action="/tambah-adm" method="post">
       <h3 class="mt-5">TAMBAH ADMINISTRATOR</h3>
       <div class="row mb-3">
         <label for="nama" class="col-sm-2 col-form-label">Nama Lengkap</label>
@@ -31,7 +31,7 @@
       </div>
       <input type="submit" class="btn btn-success" value="Simpan">
       <button class="btn btn-warning" type="reset"> Reset</button>
-      <a class="btn btn-danger" href="/data-kegiatan"> Batal</a>
+      <a class="btn btn-danger" href="/administrator"> Batal</a>
     </form>
   </div>
     
