--- a/views/administrator.ejs
+++ b/views/administrator.ejs
@@ -51,23 +51,25 @@
                   <thead>
                       <tr>
                         <th scope="col">No</th>
-                        <th scope="col">NIP</th>
                         <th scope="col">Nama</th>
+                        <th scope="col">NIP</th>
                         <th scope="col">Email</th>
                         <th scope="col">Aksi</th>
                       </tr>
                   </thead>
                   <tbody>
+                    <% for (let admins of admin) { %>
                       <tr>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
+                          <th scope="row"><%= admins.id %></th>
+                          <th scope="row"><%= admins.nama %></th>
+                          <th scope="row"><%= admins.nip %></th>
+                          <th scope="row"><%= admins.email %></th>
                           <th scope="row">
-                            <a href="" class="btn btn-primary bi-person-fill"></a>
+                            <a href="/akun-admin" class="btn btn-primary bi-person-fill"></a>
                             <a href="" class="btn btn-warning bi-pencil-square"></a>
                             <a href="" class="btn btn-danger bi-trash-fill"></a>
                       </tr>
+                    <% } %>
                   </tbody>
               </table>
             </div>
