--- a/views/akun-admin.ejs
+++ b/views/akun-admin.ejs
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="card mt-5 text-center w-50 mx-auto">
             <div class="card-body">
-                <form action="/tambah-akun-admin" method="post">
+                <form action="/tambah-akun" method="post">
                     <h3 class="mt-5">TAMBAH AKUN</h3>
                     <div class="row mb-3">
                       <label for="username" class="col-sm-2 col-form-label">Username</label>
@@ -25,6 +25,7 @@
                         <input type="password" name="password" class="form-control" required>
                       </div>
                     </div>
+                    <input type="hidden" name="role" value="admin">
                     <div class="text-center mt-3">
                         <input type="submit" class="btn btn-success" value="Simpan">
                         <a class="btn btn-danger" href="/administrator"> Tutup</a>
