--- a/views/akun-mhs.ejs
+++ b/views/akun-mhs.ejs
@@ -25,6 +25,7 @@
                         <input type="password" name="password" class="form-control" required>
                       </div>
                     </div>
+                    <input type="hidden" name="role" value="mahasiswa">
                     <div class="text-center mt-3">
                         <input type="submit" class="btn btn-success" value="Simpan">
                         <a class="btn btn-danger" href="/data-mhs"> Tutup</a>
