--- a/views/data-mhs.ejs
+++ b/views/data-mhs.ejs
@@ -84,7 +84,8 @@
                               <a href="/detail/<%= user.id %>" class="btn btn-success bi-cursor-fill"></a>
                               <a href="/akun-mhs" class="btn btn-primary bi-person-fill"></a>
                               <a href="/edit/<%= user.id %>" class="btn btn-warning edit bi-pencil-square"></a>
-                              <a href="/delete/<%= user.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this user?')"></a></th>
+                              <a href="/delete/<%= user.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this user?')"></a>
+                            </th>
                         </tr>
                         <% } %>
                     </tbody>
