--- a/views/tambah-kegiatan-mhs.ejs
+++ b/views/tambah-kegiatan-mhs.ejs
@@ -9,24 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <form action="/tambah" method="post">
+    <form action="/tambah-kegiatan-mhs" method="post">
       <h3 class="mt-5">TAMBAH KEGIATAN</h3>
-      <div class="row mb-3">
-        <label for="nama" class="col-sm-2 col-form-label">Nama Mahasiswa</label>
-        <div class="col-sm-10">
-          <select class="form-select">
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
-        </div>
-      </div>
-      <div class="row mb-3">
-        <label for="tanggal" class="col-sm-2 col-form-label">Tanggal Kegiatan</label>
-        <div class="col-sm-10">
-          <input type="date" name="tanggal" class="form-control" required>
-        </div>
-      </div>
       <div class="row mb-3">
         <label for="awal" class="col-sm-2 col-form-label">Waktu Awal Kegiatan</label>
         <div class="col-sm-10">
@@ -45,9 +29,10 @@
           <input type="text" name="kegiatan" class="form-control" required>
         </div>
       </div>
+      <input type="hidden" name="id_mahasiswa" value="<%= id_mahasiswa %>">
       <input type="submit" class="btn btn-success" value="Simpan">
       <button class="btn btn-warning" type="reset"> Reset</button>
-      <a class="btn btn-danger" href="/data-kegiatan"> Batal</a>
+      <a class="btn btn-danger" href="/kegiatan"> Batal</a>
     </form>
   </div>
     
