--- a/views/data-kegiatan.ejs
+++ b/views/data-kegiatan.ejs
@@ -71,18 +71,33 @@
                       </tr>
                   </thead>
                   <tbody>
+                    <% let index = 1; let increment = 1; %>
+                    <% kegiatan.forEach((kegiatans) => { %>
                       <tr>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
-                          <th scope="row"></th>
-                          <th scope="row">
-                            <a href="" class="btn btn-warning bi-pencil-square"></a>
-                            <a href="" class="btn btn-danger bi-trash-fill"></a>
+                        <th scope="row"><%= kegiatans.id %></th>
+                        <th scope="row"><%= kegiatans.username %></th>
+                        <th scope="row"><%= kegiatans.hari %></th>
+                        <th scope="row"><%= moment(kegiatans.tanggal).format('DD-MM-YYYY') %></th>
+                        <th scope="row">
+                            <% const jam = kegiatans.jam.split(', '); %>
+                            <% for (let i = 0; i < jam.length; i++) { %>
+                                <%= jam[i] %><br>
+                            <% } %>
+                        </th>
+                        <th scope="row">
+                          <% const kegiatan = kegiatans.kegiatan.split(', '); %>
+                          <% for (let i = 0; i < kegiatan.length; i++) { %>
+                            <%= i + 1 %>. <%= kegiatan[i] %><br>
+                          <% } %>
+                        </th>
+                        <th scope="row">
+                            <a href="/edit-kegiatan/<%= kegiatans.id %>" class="btn btn-warning bi-pencil-square"></a>
+                            <a href="/hapus-kegiatan/<%= kegiatans.id %>" class="btn btn-danger bi-trash-fill" onclick="return confirm('Are you sure you want to delete this kegiatan?')"></a>
                             <a href="" class="btn btn-primary bi-file-text-fill"></a>
-                      </tr>
+                        </th>
+                    </tr>
+                      <% increment = kegiatan.length; %>
+                      <% }) %>
                   </tbody>
               </table>
             </div>
