--- a/views/tambah-kegiatan.ejs
+++ b/views/tambah-kegiatan.ejs
@@ -9,15 +9,15 @@
 </head>
 <body>
   <div class="container">
-    <form action="/tambah" method="post">
+    <form action="/tambah-kegiatan" method="post">
       <h3 class="mt-5">TAMBAH KEGIATAN</h3>
       <div class="row mb-3">
-        <label for="nama" class="col-sm-2 col-form-label">Nama Mahasiswa</label>
+        <label for="id_mahasiswa" class="col-sm-2 col-form-label">Nama Mahasiswa</label>
         <div class="col-sm-10">
-          <select class="form-select">
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
+          <select class="form-select" name="id_mahasiswa">
+            <% mahasiswa.forEach((mhs) => { %>
+              <option value="<%= mhs.id %>"><%= mhs.username %></option>
+            <% }) %>
           </select>
         </div>
       </div>
