--- a/views/tambah-admin.ejs
+++ b/views/tambah-admin.ejs
@@ -29,10 +29,15 @@
           <input type="email" name="email" class="form-control" required>
         </div>
       </div>
-      <input type="submit" class="btn btn-success" value="Simpan">
+      <button type="submit" class="btn btn-success" <% if (accountCreated) { %>disabled<% } %>>Simpan</button>
       <button class="btn btn-warning" type="reset"> Reset</button>
       <a class="btn btn-danger" href="/administrator"> Batal</a>
     </form>
+
+    <% if (accountCreated) { %>
+      <p>Akun mahasiswa sudah dibuat. Anda tidak dapat membuat akun lagi.</p>
+    <% } %>
+
   </div>
     
     <script src="/bootstrap/js/bootstrap.min.js"></script>
