--- a/views/akun-admin.ejs
+++ b/views/akun-admin.ejs
@@ -12,7 +12,8 @@
         <div class="card mt-5 text-center w-50 mx-auto">
             <div class="card-body">
                 <form action="/tambah-akun" method="post">
-                    <h3 class="mt-5">TAMBAH AKUN</h3>
+                    <h3 class="mt-5">TAMBAH AKUN ADMIN</h3>
+                    <input type="hidden" name="admin_id" value="5">
                     <div class="row mb-3">
                       <label for="username" class="col-sm-2 col-form-label">Username</label>
                       <div class="col-sm-10">
@@ -27,10 +28,11 @@
                     </div>
                     <input type="hidden" name="role" value="admin">
                     <div class="text-center mt-3">
-                        <input type="submit" class="btn btn-success" value="Simpan">
+                      <button type="submit" class="btn btn-success" >Simpan</button>
                         <a class="btn btn-danger" href="/administrator"> Tutup</a>
                     </div>
                 </form>
+                
             </div>
         </div>
     </div>
