--- a/views/akun-admin.ejs
+++ b/views/akun-admin.ejs
@@ -13,7 +13,6 @@
             <div class="card-body">
                 <form action="/tambah-akun" method="post">
                     <h3 class="mt-5">TAMBAH AKUN ADMIN</h3>
-                    <input type="hidden" name="admin_id" value="5">
                     <div class="row mb-3">
                       <label for="username" class="col-sm-2 col-form-label">Username</label>
                       <div class="col-sm-10">
@@ -28,11 +27,13 @@
                     </div>
                     <input type="hidden" name="role" value="admin">
                     <div class="text-center mt-3">
-                      <button type="submit" class="btn btn-success" >Simpan</button>
+                      <button type="submit" class="btn btn-success" <% if (accountCreated) {%>disabled<%} %> >Simpan</button>
                         <a class="btn btn-danger" href="/administrator"> Tutup</a>
                     </div>
                 </form>
-                
+                <% if (accountCreated) { %>
+                  <p>Akun admin sudah dibuat</p>
+                <% } %>
             </div>
         </div>
     </div>
