--- a/views/akun-mhs.ejs
+++ b/views/akun-mhs.ejs
@@ -13,6 +13,7 @@
             <div class="card-body">
                 <form action="/tambah-akun" method="post">
                     <h3 class="mt-5">TAMBAH AKUN</h3>
+                    <input type="hidden" name="admin_id">
                     <div class="row mb-3">
                       <label for="username" class="col-sm-2 col-form-label">Username</label>
                       <div class="col-sm-10">
