--- a/views/akun-mhs.ejs
+++ b/views/akun-mhs.ejs
@@ -33,8 +33,10 @@
                     </div>
                 </form>
                 <% if (accountCreated) { %>
-                  <p>Akun mahasiswa sudah dibuat. Anda tidak dapat membuat akun lagi.</p>
-                <% } %>
+                  <p>Akun sudah ada untuk pengguna ini.</p>
+              <% } else { %>
+                  <p>Tidak ada akun untuk pengguna ini. Silakan buat akun baru.</p>
+              <% } %>
             </div>
         </div>
     </div>
