--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -81,7 +81,7 @@
                           </tr>
                         </tbody>
                       </table>
-                      <a href="" class="btn btn-primary bi-key-fill"> Ubah Password</a>
+                      <a href="/ubah-password" class="btn btn-primary bi-key-fill"> Ubah Password</a>
                 </div>
             </div>
 
